--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ pyannote.database
 pyannote.core
 pyannote.pipeline
 pyannote.metrics
-https://github.com/pyannote/pyannote-audio/archive/develop.zip
+git+https://github.com/pyannote/pyannote-audio/archive/develop.zip
 
 #audio
 pydub
