Delete pyannote requirements duplicates

--- a/requirements.txt
+++ b/requirements.txt
@@ -49,11 +49,11 @@ pytest-shutil
 python-multipart
 
 # pyannote
-pyannote.audio
-pyannote.database
-pyannote.core
-pyannote.pipeline
-pyannote.metrics
+# pyannote.audio
+# pyannote.database
+# pyannote.core
+# pyannote.pipeline
+# pyannote.metrics
 git+https://github.com/pyannote/pyannote-audio/archive/develop.zip
 
 #audio
