--- a/requirements.txt
+++ b/requirements.txt
@@ -59,9 +59,12 @@ azure.cognitiveservices.speech
 #google
 google-cloud-speech
 google-cloud-storage
+google-cloud-bigquery
 
 #
 protobuf==3.19.0
 
 #
 speechbrain
+
+db-dtypes
